argo-cd/overlays/production/argocd-dex-server-support-auth-argo-workflows-patch.yaml
# https://argoproj.github.io/argo-workflows/argo-server-sso-argocd/
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
spec:
  template:
    spec:
      containers:
        - name: dex
